github link added

--- a/index.html
+++ b/index.html
@@ -2,41 +2,44 @@
   <html>
     <head>
       <title>Adriana Osorio's Profile</title>
-      <meta name="Adriana Osorio's Profile" content="My profile page.">
+      <meta name="Adriana Osorio" content="My profile page.">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="style.css">
       <meta charset="utf-8">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     </head>
     <body>
-      <div class = "main__title">
-        <h1>Hi there, I'm Adriana ✨</h1>
-        <img class = "profile-pic" src="images/60563242_10205679299297361_4050480169620602880_n.jpg" alt="Adriana Osorio's picture">
-        <h2>Full-Stack developer (soon to-be)</h2>
+
+      <div class = "container">
+        <div class = "main__title">
+          <h1>Hi there, I'm Adriana ✨</h1>
+          <img class = "profile-pic" src="images/60563242_10205679299297361_4050480169620602880_n.jpg" alt="Adriana Osorio's picture">
+          <h2>Full-Stack developer (soon to-be)</h2>
+        </div>
+        <div class = "main__title">
+          <h3>Professional Background</h3>
+          <p>I am a systems engineer and I have worked many years in sofwtare development on mainframe platforms.
+            I also worked full-time as a "General Manager" in my home, mothering four amazing kids who are now living their own lives very happily.
+            So I decided it was time to get back at full speed on coding, which is what I love to do 👩‍💻.
+          </p>
+        </div>
+        <div class = "main__title">
+          <h3>Hobbies</h3>
+          <p>I love sports! I workout at the gym, I do biking, running and also swimming. I love to go to the movies.
+            I am also passionate about music. I play the drums (samba style) and a little bit of guitar and piano. Oh, I almost forgot, I also love to do yoga and meditation!🧘‍♀️
+          </p>
+        </div>
+        <div class = "footer">
+          <h3 class = "links-cta">Follow Me</h2>
+          <ul class="list-inline">
+            <li><a href="https://github.com/OsorioDri" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/adriana-osorio-de-moraes/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.facebook.com/driosorio/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/dri.om/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+        </div>
       </div>
-      <div class = "main__title">
-        <h3>Professional Background</h3>
-        <p>I am a systems engineer and I have worked many years in sofwtare development on mainframe platforms.
-          I also worked full-time as a General Manager in my home, mothering four amazing kids who are now living their own lives very happily.
-          So I decided it was time to get back at full speed on coding, which is what I love to do 👩‍💻.
-        </p>
-      </div>
-      <div class = "main__title">
-        <h3>Hobbies</h3>
-        <p>I love sports! I workout at the gym, I do biking, running and also swimming. I love to go to the movies.
-          I am also passionate about music. I play the drums (samba style) and a little bit of guitar and piano. Oh, I almost forgot, I also love to do yoga and meditation!🧘‍♀️
-        </p>
-        <form>
-          <input type="submit" value="Curtir">
-        </form>
-      </div>
-      <div class = "footer">
-        <h2 class = "links-cta">Follow Me</h2>
-        <ul>
-          <li><a href="https://www.linkedin.com/in/adriana-osorio-de-moraes/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="https://www.facebook.com/driosorio/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-          <li><a href="https://www.instagram.com/dri.om/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-      </div>
+
     </body>
   </html>
 <!-- end of file -->
